fixed horizontal scroll issue, tweaked line-height

--- a/css/index.css
+++ b/css/index.css
@@ -170,7 +170,7 @@ column-gap: 1em;
   .center p{
     top: 0%;
     font-size: 48px;
-    line-height: 2.8rem;
+    line-height: 3.8rem;
     padding: 0 1%;
   }
   .cover-btn{
